# RMiniZinc

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md
R/: AssignItem.R  CommonMZNProblems.R  Constraint.R  ConstraintItem.R  DeclFunctions.R  Expression.R  FunctionItem.R  IncludeItem.R  Item.R  Model.R  RcppExports.R  SolveItem.R  SolveType.R  Type.R  Value.R  VarDeclItem.R  Variable.R  catch-routine-registration.R  constraint.R  data.R  environ.R  generate_expr.R  getCollections.R  getRModel.R  get_expression.R  get_missing_pars.R  get_mzn_results.R  helper_serialize.R  iter_delete.R  model.R  new_decision_var.R  new_param.R  objective.R  parsetoR6.R  results.R  rfunc_minizinc.R  set_params.R  setup_constraints.R  solver_options.R  specify_problem.R  (+6 more)
data/: config.RData  data.dzn  model.mzc.mzn  model.mzn  proot.RData  slvbin.RData
inst/extdata/mzn_examples/Hamiltonian/: Hamiltonian.R  Hamiltonian.dzn
inst/extdata/mzn_examples/aust_color/: aust_colord.mzn
inst/extdata/mzn_examples/crazy_sets/: crazy_sets.mzn
inst/extdata/mzn_examples/jobshop/: jobshop_1.mzn
inst/minizinc/solvers/: chuffed.msc.in  findmus.msc.in  gecode-gist.msc.in  gecode.msc.in  globalizer.msc.in
inst/mzn_examples/Hamiltonian/: Hamiltonian.R
inst/mzn_examples/crazy_sets/: crazy_sets_global.mzn
inst/mzn_examples/jobshop/: jobshop_0.mzn
inst/mzn_examples/knapsack/: knapsack_0.dzn
inst/mzn_examples/production_planning/: prod_plan_0.dzn  prod_plan_0.mzn
man/: Annotation.Rd  ArrDomainDecl.Rd  Array.Rd  ArrayAccess.Rd  AssignItem.Rd  BinOp.Rd  Binop.Rd  Bool.Rd  BoolArrDecl.Rd  BoolDecl.Rd  BoolSetDecl.Rd  Call.Rd  Comprehension.Rd  ConstraintItem.Rd  Expression.Rd  Float.Rd  FloatArrDecl.Rd  FloatDecl.Rd  FloatSetDecl.Rd  FloatSetVal.Rd  FloatVal.Rd  FunctionItem.Rd  Generator.Rd  Id.Rd  IncludeItem.Rd  Int.Rd  IntArrDecl.Rd  IntDecl.Rd  IntSetDecl.Rd  IntSetVal.Rd  IntVal.Rd  Ite.Rd  Item.Rd  LIBMINIZINC_PATH.Rd  Let.Rd  Model.Rd  PROJECT_DIRECTORY.Rd  SOLVER_BIN.Rd  Set.Rd  SetVal.Rd  (+76 more)
mzn_examples/Hamiltonian/: Hamiltonian.R  Hamiltonian.mzn
mzn_examples/assign/: assign.R  assign.mzn  assign_dual.mzn  assign_inverse.mzn
mzn_examples/aust_color/: aust_color.R  aust_color.mzn
mzn_examples/crazy_sets/: crazy_sets.dzn  crazy_sets.mzn
mzn_examples/jobshop/: jobshop.R  jobshop.dzn  jobshop_2.mzn
mzn_examples/knapsack/: knapsack_0.mzn  knapsack_01.R  knapsack_1.dzn  knapsack_1.mzn  knapsack_1_update.mzn  knapsack_234.R  knapsack_2_update.mzn  knapsack_3(set_concise).mzn  knapsack_4(set).mzn
mzn_examples/production_planning/: prod_plan_0.R
mzn_examples/shipping/: shipping.R  shipping_update.mzn
mzn_test_examples/: knapsack.mzn  knapsack_0.R  knapsack_01.R  knapsack_0_update.mzn  knapsack_1.R  knapsack_1_update.mzn  knapsack_2.R  knapsack_234.R  knapsack_2_update.mzn  knapsack_updated.mzn
mzn_test_examples/jobshop/: jobshop.R
mzn_test_examples/knapsack/: knapsack_0.mzn  knapsack_01.R  knapsack_0_update.mzn  knapsack_1.mzn  knapsack_234.R  knapsack_2_update.mzn  knapsack_3_update.mzn  knapsack_4(set).mzn  knapsack_4_update.mzn
mzn_test_examples/production_planning/: prod_plan_0.R  prod_plan_0_update.mzn
mzn_test_examples/shipping/: shipping.R  shipping.mzn
src/: Makevars  Makevars.in  Makevars.win.in  RcppExports.cpp  config.h  config.h.in  deleteItem.cpp  deleteItem.h  expDetails.cpp  expDetails.h  expVarNames.cpp  expVarNames.h  exp_details.cpp  exp_details.h  filetoString.cpp  filetoString.h  getMissingPars.cpp  getMissingPars.h  get_missing_pars.cpp  get_missing_pars.h  helper_modify.cpp  helper_modify.h  helper_parse.cpp  helper_parse.h  helper_sol_parse.cpp  helper_sol_parse.h  modifyDomain.cpp  mzn_eval.cpp  mzn_eval.h  mzn_parse.cpp  mzn_parse.h  pathStringcheck.cpp  pathStringcheck.h  set_params.cpp  set_params.h  sol_parse.cpp  sol_parse.h
src/cpp_tests/: test-deleteItem.cpp  test-getMissingPars.cpp  test-get_missing_pars.cpp  test-mzn_eval.cpp  test-mzn_parse.cpp  test-set_params.cpp  test-sol_parse.cpp
tests/: testthat.R
tests/testthat/: test-cpp.R  test_constraint.R  test_get_expression.R  test_jobshop.R  test_model.R  test_modify.R  test_objective.R  test_parsetoR6.R  test_problems.R  test_prodplan.R  test_results.R  test_variable.R  test_worflowcpp.R  test_write_model.R
vignettes/: R_MiniZinc.R  R_MiniZinc.Rmd  R_MiniZinc.html  data
